美化搜索结果的样式

--- a/src/ListenTogether/Pages/SearchResultPage.xaml
+++ b/src/ListenTogether/Pages/SearchResultPage.xaml
@@ -69,7 +69,7 @@
                 <CollectionView.GroupHeaderTemplate>
                     <DataTemplate>
                         <Label Text="{Binding Name}"
-                               BackgroundColor="{AppThemeBinding Dark={StaticResource DarkGroupBackgroundColor},Light={StaticResource LightGroupBackgroundColor}}"
+                               TextColor="{StaticResource Main}"
                                Margin="0,20,0,10"
                                Padding="5,0,5,0"
                                FontSize="18"
