--- a/src/ListenTogether/Pages/PlayingPage.xaml
+++ b/src/ListenTogether/Pages/PlayingPage.xaml
@@ -22,6 +22,8 @@
                     Value="CenterAndExpand"/>
             <Setter Property="VerticalOptions"
                     Value="CenterAndExpand"/>
+            <Setter Property="LineBreakMode"
+                    Value="TailTruncation"/>
             <Style.Triggers>
                 <DataTrigger Binding="{Binding IsHighlight}"
                              Value="True"
@@ -44,114 +46,128 @@
         <controls:Loading
             IsRunning="{Binding IsLoading}"
             Text="{Binding LoadingText}"/>
-        <StackLayout 
-            VerticalOptions="FillAndExpand"
-            Margin="{OnPlatform WinUI='0,80,0,0',Android='0,10,0,0',iOS='0,10,0,0'}"
-            Style="{StaticResource StackLayoutLoading}">
-            <StackLayout VerticalOptions="StartAndExpand"
-                         Orientation="{OnPlatform WinUI=Horizontal}"
-                         WidthRequest="800"
-                         HeightRequest="{OnPlatform WinUI=400,iOS=400,Android=550}">
-                <StackLayout HorizontalOptions="CenterAndExpand">
-                    <Image HorizontalOptions="Center"
-                           Aspect="AspectFit"
-                           MaximumHeightRequest="250"
-                           WidthRequest="{OnPlatform WinUI=250,Android=350,iOS=350}">
-                        <Image.Source>
-                            <UriImageSource Uri="{Binding CurrentMusic.ImageUrl}"
-                                            CacheValidity="30" />
-                        </Image.Source>
-                    </Image>
+        <Grid
+            RowDefinitions="{OnPlatform WinUI='*,90',Android='400,*,110',iOS='400,*,110'}"
+            ColumnDefinitions="{OnPlatform WinUI='*,*',Android='*',iOS='*'}"
+            Style="{StaticResource StackLayoutLoading}"
+            VerticalOptions="FillAndExpand"            >
+            <StackLayout
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="{OnPlatform WinUI='20,80,10,80',Android='20,10,20,0',iOS='20,10,20,0'}">
+                <Image
+                    HorizontalOptions="Center"
+                    Aspect="AspectFit"
+                    WidthRequest="{OnPlatform WinUI=250,Android=350,iOS=350}">
+                    <Image.Source>
+                        <UriImageSource
+                            Uri="{Binding CurrentMusic.ImageUrl}"
+                            CacheValidity="30" />
+                    </Image.Source>
+                </Image>
 
-                    <Label Margin="0,10,0,0"
-                           HorizontalOptions="Center"
-                           Text="{Binding ShareLabelText}"
-                           TextColor="{StaticResource PlayingPageText}">
-                        <Label.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding ShareMusicLinkAsyncCommand}"/>
-                        </Label.GestureRecognizers>
-                    </Label>
+                <Label
+                    Margin="0,10,0,0"
+                    HorizontalOptions="Center"
+                    Text="{Binding ShareLabelText}"
+                    TextColor="{StaticResource PlayingPageText}">
+                    <Label.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding ShareMusicLinkAsyncCommand}"/>
+                    </Label.GestureRecognizers>
+                </Label>
 
-                </StackLayout>
+            </StackLayout>
 
-                <StackLayout Margin="{OnPlatform WinUI='0',Android='0,30,0,0',iOS='0,30,0,0'}"
-                             VerticalOptions="FillAndExpand"
-                             HorizontalOptions="CenterAndExpand">
-                    <Label Text="当前未播放歌曲"
-                           TextColor="{StaticResource PlayingPageText}"
-                           HorizontalTextAlignment="Center"
-                           IsVisible="{Binding CurrentMusic, Converter={StaticResource IsEqualConverter}}"/>
+            <StackLayout
+                Grid.Row="{OnPlatform WinUI='0',Android='1',iOS='1'}"
+                Grid.Column="{OnPlatform WinUI='1',Android='0',iOS='0'}"
+                Margin="{OnPlatform WinUI='10,80,20,80',Android='20,20,10,0',iOS='20,20,20,0'}">
+                <Label
+                    Text="当前未播放歌曲"
+                    TextColor="{StaticResource PlayingPageText}"
+                    HorizontalTextAlignment="Center"
+                    IsVisible="{Binding CurrentMusic, Converter={StaticResource IsEqualConverter}}"/>
 
-                    <StackLayout VerticalOptions="FillAndExpand"
-                                 IsVisible="{Binding CurrentMusic, Converter={StaticResource IsNotEqualConverter}}">
+                <StackLayout
+                    VerticalOptions="FillAndExpand"
+                    IsVisible="{Binding CurrentMusic, Converter={StaticResource IsNotEqualConverter}}">
 
-                        <StackLayout Orientation="Horizontal"
-                                     HorizontalOptions="CenterAndExpand">
+                    <StackLayout
+                        Orientation="Horizontal"
+                        HorizontalOptions="CenterAndExpand">
 
-                            <Border Padding="4,0,4,0"
+                        <Border Padding="4,0,4,0"
                                     StrokeThickness="1"
                                     VerticalOptions="Center"
                                     HorizontalOptions="Center">
-                                <Border.StrokeShape>
-                                    <RoundRectangle CornerRadius="5" />
-                                </Border.StrokeShape>
-                                <Label Text="{Binding CurrentMusic.PlatformName}"
+                            <Border.StrokeShape>
+                                <RoundRectangle CornerRadius="5" />
+                            </Border.StrokeShape>
+                            <Label Text="{Binding CurrentMusic.PlatformName}"
                                        FontSize="16"
                                        Style="{StaticResource Explain}"/>
-                            </Border>
+                        </Border>
 
-                            <Label Margin="10,0,0,0"
-                                   Text="{Binding CurrentMusic.Name}"
-                                   TextColor="{StaticResource PlayingPageText}"
-                                   FontSize="22"
-                                   VerticalOptions="Center"
-                                   HorizontalTextAlignment="Center"/>
-                        </StackLayout>
-
-                        <StackLayout VerticalOptions="Start"
-                                     Margin="0,10,0,20">
-                            <Label TextColor="{StaticResource PlayingPageTextSecond}"
-                                   FontSize="16"
-                                   HorizontalTextAlignment="Center">
-                                <MultiBinding StringFormat="{}{0} - {1}">
-                                    <Binding Path="CurrentMusic.Artist" />
-                                    <Binding Path="CurrentMusic.Album" />
-                                </MultiBinding>
-                            </Label>
-
-                        </StackLayout>
-
-                        <!-- 歌词 -->
-                        <CollectionView VerticalOptions="FillAndExpand"
-                                        x:Name="ListLyrics"
-                                        EmptyView="暂无歌词"
-                                        ItemsSource="{Binding Lyrics}"
-                                        HorizontalOptions="Center"
-                                        SelectionMode="None">
-                            <CollectionView.Behaviors>
-                                <mct:EventToCommandBehavior EventName="Scrolled"
-                                                            Command="{Binding LyricsScrolledDoCommand}"/>
-
-                            </CollectionView.Behaviors>
-                            <CollectionView.ItemTemplate>
-                                <DataTemplate>
-                                    <StackLayout HorizontalOptions="Center"
-                                                 VerticalOptions="Center"
-                                                 HeightRequest="{OnPlatform WinUI=40,Android=30,iOS=30}">
-                                        <Label Text="{Binding Info}"
-                                               Style="{StaticResource LyricItem}"/>
-                                    </StackLayout>
-                                </DataTemplate>
-                            </CollectionView.ItemTemplate>
-                        </CollectionView>
+                        <Label
+                            Margin="10,0,0,0"
+                            Text="{Binding CurrentMusic.Name}"
+                            TextColor="{StaticResource PlayingPageText}"
+                            FontSize="22"
+                            VerticalOptions="Center"
+                            HorizontalTextAlignment="Center"/>
                     </StackLayout>
+
+                    <StackLayout
+                        VerticalOptions="Start"
+                        Margin="0,10,0,30">
+                        <Label
+                            TextColor="{StaticResource PlayingPageTextSecond}"
+                            FontSize="16"
+                            HorizontalTextAlignment="Center">
+                            <MultiBinding StringFormat="{}{0} - {1}">
+                                <Binding Path="CurrentMusic.Artist" />
+                                <Binding Path="CurrentMusic.Album" />
+                            </MultiBinding>
+                        </Label>
+                    </StackLayout>
+
+                    <!-- 歌词 -->
+                    <CollectionView
+                        HorizontalOptions="FillAndExpand"
+                        VerticalOptions="FillAndExpand"                                   
+                        x:Name="ListLyrics"
+                        EmptyView="暂无歌词"
+                        ItemsSource="{Binding Lyrics}"
+                        SelectionMode="None">
+                        <CollectionView.Behaviors>
+                            <mct:EventToCommandBehavior
+                                EventName="Scrolled"
+                                Command="{Binding LyricsScrolledDoCommand}"/>
+
+                        </CollectionView.Behaviors>
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <StackLayout
+                                    HorizontalOptions="Center"
+                                    VerticalOptions="Center"                                    
+                                    HeightRequest="{OnPlatform WinUI=40,Android=30,iOS=30}">
+                                    <Label
+                                        Text="{Binding Info}"
+                                        Style="{StaticResource LyricItem}"/>
+                                </StackLayout>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
                 </StackLayout>
             </StackLayout>
-            <StackLayout VerticalOptions="End">
+
+            <StackLayout
+                Grid.Row="{OnPlatform WinUI='1',Android='2',iOS='2'}"
+                Grid.Column="0"
+                Grid.ColumnSpan="{OnPlatform WinUI='2',Android='1',iOS='1'}">
                 <controls:Player x:Name="player"
                                  IsPlayingPage="True"/>
             </StackLayout>
-        </StackLayout>
-
+        </Grid>
     </Grid>
 </ContentPage>
