--- a/src/ListenTogether/Resources/Styles/Styles.xaml
+++ b/src/ListenTogether/Resources/Styles/Styles.xaml
@@ -111,4 +111,21 @@
             </DataTrigger>
         </Style.Triggers>
     </Style>
+
+    <Style x:Key="GridLoading" TargetType="Grid">
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding IsLoading}"
+                         Value="True"
+                         TargetType="Grid">
+                <Setter Property="Opacity"
+                        Value="0.2"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding IsLoading}"
+                         Value="False"
+                         TargetType="Grid">
+                <Setter Property="Opacity"
+                        Value="1"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
 </ResourceDictionary>
