--- a/src/ListenTogether/Controls/Player.xaml
+++ b/src/ListenTogether/Controls/Player.xaml
@@ -76,6 +76,7 @@
                                     Style="{StaticResource Explain}"
                                     VerticalTextAlignment="Center"/>
                                 <Label
+                                    x:Name="LblProgressSplit"
                                     Margin="5,0,5,0"
                                     Text="/"
                                     Style="{StaticResource Explain}"
