咪咕歌单标签页面

--- a/src/ListenTogether/Pages/DesktopShell.xaml
+++ b/src/ListenTogether/Pages/DesktopShell.xaml
@@ -27,6 +27,17 @@
         </StackLayout>
     </Shell.FlyoutHeader>
 
+    <FlyoutItem Title="发现"
+                Icon="{AppThemeBinding Light=home.png, Dark=home_dark.png}">
+        <Tab Title="网易云音乐">
+            <ShellContent  ContentTemplate="{DataTemplate pages:NetEasePage}" />
+        </Tab>
+        <Tab Title="咪咕音乐">
+            <ShellContent  ContentTemplate="{DataTemplate pages:MiGuPage}" />
+        </Tab>
+        
+    </FlyoutItem>
+
     <FlyoutItem Title="{Binding SearchResult.Title}"
                 Icon="{AppThemeBinding Light=search.png, Dark=search_dark.png}">
         <Tab>
